# Document-Intelligence-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAG_demo.py  README.md  agent_demo.py  docker-compose.yml  main.py  manage.py  pyproject.toml  query.py
.claude/: settings.local.json
data/chroma_db/: chroma.sqlite3
eval/: run_eval.py  test_cases.py
src/: config.py
src/agent/: agent.py  tools.py
src/api/: app.py  models.py
src/ingestion/: chunker.py  loader.py
src/observability/: token_tracker.py
src/vectorstore/: chroma_store.py
tests/: conftest.py  test_agent_orchestration.py  test_calculate.py  test_chunker.py  test_extract_entities.py  test_guardrails.py  test_token_tracker.py
