[project]
name = "document-intelligence-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.1",
    "pypdf>=6.7.5",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.3",
    "tavily-python>=0.7.22",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
